--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,7 +69,7 @@ aside nav ul {
 aside nav ul li {
   background: #313638;
   margin-right: 0;
-  transition: width 250ms ease-out 100ms;
+  transition: background 150ms ease-out 30ms;
   text-align: right;
   padding: 3px 5px 3px 0;
 }
@@ -84,7 +84,10 @@ aside nav ul li:nth-child(3) {
   width: 9.5em;
 }
 aside nav ul li:hover {
-  width: 80%;
+  background: #fff;
+}
+aside nav ul li:hover a {
+  color: #313638;
 }
 aside nav ul a {
   text-decoration: none;
@@ -92,10 +95,12 @@ aside nav ul a {
   width: 100%;
   height: 100%;
   display: block;
+  transition: color 250ms ease-out 100ms;
 }
 
 main {
   float: right;
   width: 70%;
+  max-width: 70%;
   padding: 5em 0 6em;
 }
