--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -77,7 +77,7 @@ aside {
       li {
         background: #313638;
         margin-right: 0;
-        transition: width 250ms ease-out 100ms;
+        transition: background 150ms ease-out 30ms;
         text-align: right;
         padding: 3px 5px 3px 0;
 
@@ -96,7 +96,11 @@ aside {
       }
 
       li:hover {
-        width: 80%;
+        background: #fff;
+        
+        a {
+          color: #313638;
+        }
       }
 
       a {
@@ -105,6 +109,7 @@ aside {
         width: 100%;
         height: 100%;
         display: block;
+        transition: color 250ms ease-out 100ms; 
       }
     }
   }
@@ -113,5 +118,6 @@ aside {
 main {
   float: right;
   width: 70%;
+  max-width: 70%;
   padding: 5em 0 6em;
 }
