--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -36,3 +36,31 @@ div.pagination-wrapper a {
     color: #85A762;
     text-decoration: none;
 }
+
+figure {
+    text-align: center;
+    margin: 0.5em;
+    padding: 0.5em;
+}
+
+figure.right {
+    position: relative;
+    float: right;
+    left: 23%;
+    margin-left: -18%;
+}
+
+figure.center img {
+    width: 100%;
+}
+
+figure img {
+    vertical-align: top;
+}
+
+figure figcaption {
+    font-size: 10pt;
+    font-style: italic;
+    margin: 0 auto;
+    padding-top: 5px;
+}
