--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -121,3 +121,68 @@ main {
   max-width: 70%;
   padding: 5em 0 6em;
 }
+
+@media screen and (max-width: 1110px) {
+  .wrap {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100vw;
+    max-width: 100vw;
+  }
+
+  .wrap aside {
+    float: none;
+    width: 100vw;
+    box-shadow: 0 5px 5px -5px gray;
+    background: #313638;
+    
+    div.title-wrapper {
+      padding: 0.25em 0;
+      justify-content: flex-end;
+    }
+
+    div.title {
+      justify-content: center;
+      
+      .title-part-one {
+        color: #fff;
+      }
+
+      .title-part-two {
+        padding: 0 1.25em 0 0.1em;
+        color: #fff;
+      }
+    }
+    
+    nav {
+      border-right: none;
+      background: #fff;
+      
+      ul {
+        flex-direction: row;
+        height: 25px;
+
+        li {
+          flex: 1 1 0px;
+          text-align: center;
+          background: none;
+          
+          a {
+            color: #313638;
+          }
+        }
+      }
+    }
+  }
+
+  .wrap main {
+    float: none;
+    width: 100vw;
+    min-width: 100vw;
+    padding: 2em 1em 3em;
+  }
+
+  main p  {
+    text-align: justify;
+  }
+}
