--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,6 +17,7 @@ body > * {
 }
 
 .wrap {
+  overflow-x: hidden;
   width: 90%;
   max-width: 1000px;
 }
@@ -109,8 +110,8 @@ main {
   .wrap {
     display: flex;
     flex-direction: column-reverse;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
   }
 
   .wrap aside {
@@ -152,8 +153,8 @@ main {
 
   .wrap main {
     float: none;
-    width: 100vw;
-    min-width: 100vw;
+    width: 100%;
+    min-width: 100%;
     padding: 2em 1em 3em;
   }
 
